Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -286,18 +286,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:1: FutureWarning: pandas.scatter_matrix is deprecated, use pandas.plotting.scatter_matrix instead\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pd.scatter_matrix(boston_features)"
+    "pd.plotting.scatter_matrix(boston_features)"
    ]
   },
   {
