--- a/index.ipynb
+++ b/index.ipynb
@@ -711,7 +711,7 @@
     }
    ],
    "source": [
-    "pd.plotting.scatter_matrix(boston_features);"
+    "pd.plotting.scatter_matrix(boston_features, figsize=(12,12));"
    ]
   },
   {
