--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.plotting.scatter_matrix(boston_features, figsize=(10,15));"
+   ]
   },
   {
    "cell_type": "code",
