Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd.plotting.scatter_matrix(boston_features, figsize=(10,15));"
+    "#pd.plotting.scatter_matrix(boston_features, figsize=(10,15));\n",
+    "bost"
    ]
   },
   {
