Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
    "outputs": [],
    "source": [
     "#pd.plotting.scatter_matrix(boston_features, figsize=(10,15));\n",
-    "bost"
+    "boston_features.iloc[:,:]"
    ]
   },
   {
