--- a/index.ipynb
+++ b/index.ipynb
@@ -313,12 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'PTRATIO',\n",
+       "       'B'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#pd.plotting.scatter_matrix(boston_features, figsize=(10,15));\n",
-    "boston_features.iloc[:,:]"
+    "boston_features.iloc[:,:10].columns"
    ]
   },
   {
