Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -313,25 +313,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Index(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'PTRATIO',\n",
-       "       'B'],\n",
+       "       'B', 'LSTAT'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#pd.plotting.scatter_matrix(boston_features, figsize=(10,15));\n",
-    "boston_features.iloc[:,:10].columns"
+    "boston_features.iloc[:,:11].columns"
    ]
   },
   {
