--- a/index.ipynb
+++ b/index.ipynb
@@ -313,25 +313,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', 'PTRATIO',\n",
-       "       'B', 'LSTAT'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#pd.plotting.scatter_matrix(boston_features.iloc[:,:11], figsize=(10,15));\n",
-    "boston_features.iloc[:,:11].columns"
+    "pd.plotting.scatter_matrix(boston_features.iloc[:,:11], figsize=(10,15));\n"
    ]
   },
   {
