Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -330,6 +330,7 @@
     }
    ],
    "source": [
+    "boston_no_cat\n",
     "pd.plotting.scatter_matrix(boston_features.iloc[:,:11], figsize=(10,15));\n"
    ]
   },
