--- a/index.ipynb
+++ b/index.ipynb
@@ -602,7 +602,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boston_no_cat"
+   ]
   },
   {
    "cell_type": "markdown",
