--- a/index.ipynb
+++ b/index.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
        "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -741,7 +741,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
+       "      <td>True</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
@@ -801,10 +801,10 @@
        "ZN       False   True  False  False  False  False  False  False    False   \n",
        "INDUS    False  False   True  False   True  False  False  False    False   \n",
        "CHAS     False  False  False   True  False  False  False  False    False   \n",
-       "NOX      False  False   True  False   True  False  False  False    False   \n",
+       "NOX      False  False   True  False   True  False  False   True    False   \n",
        "RM       False  False  False  False  False   True  False  False    False   \n",
        "AGE      False  False  False  False  False  False   True  False    False   \n",
-       "DIS      False  False  False  False  False  False  False   True    False   \n",
+       "DIS      False  False  False  False   True  False  False   True    False   \n",
        "PTRATIO  False  False  False  False  False  False  False  False     True   \n",
        "B        False  False  False  False  False  False  False  False    False   \n",
        "LSTAT    False  False  False  False  False  False  False  False    False   \n",
@@ -823,13 +823,13 @@
        "LSTAT    False   True  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "boston_no_cat.corr() > .75"
+    "abs(boston_no_cat.corr()) > .75"
    ]
   },
   {
