--- a/index.ipynb
+++ b/index.ipynb
@@ -844,7 +844,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "abs()"
+   ]
   },
   {
    "cell_type": "markdown",
