Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -841,11 +841,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CRIM       False\n",
+       "ZN         False\n",
+       "INDUS       True\n",
+       "CHAS       False\n",
+       "NOX         True\n",
+       "RM         False\n",
+       "AGE        False\n",
+       "DIS        False\n",
+       "PTRATIO    False\n",
+       "B          False\n",
+       "LSTAT      False\n",
+       "Name: NOX, dtype: bool"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "abs(boston_no_cat.corr()[\"NOX\"])"
+    "abs(boston_no_cat.corr()[\"NOX\"] > .75)"
    ]
   },
   {
