Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -854,20 +854,20 @@
        "NOX         True\n",
        "RM         False\n",
        "AGE        False\n",
-       "DIS        False\n",
+       "DIS         True\n",
        "PTRATIO    False\n",
        "B          False\n",
        "LSTAT      False\n",
        "Name: NOX, dtype: bool"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "abs(boston_no_cat.corr()[\"NOX\"] > .75)"
+    "abs(boston_no_cat.corr())[\"NOX\"] > .75"
    ]
   },
   {
