Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -842,7 +842,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -869,6 +871,13 @@
    "source": [
     "abs(boston_no_cat.corr())[\"NOX\"] > .75"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
