Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -877,7 +877,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boston_no_cat.loc"
+   ]
   },
   {
    "cell_type": "markdown",
