Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -878,7 +878,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "boston_no_cat.loc[boston_no_cat]"
+    "boston_no_cat.drop('NOX')"
    ]
   },
   {
